[package]
name = "treeutils"
version = "0.1.0"
description = "Tools for deduplicating and diffing folders recursively"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/treeutils"
repository = "https://github.com/wilsonzlin/treeutils.git"
readme = "README.md"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
blake3 = "1.3.3"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
crossbeam = "0.8.2"
dashmap = "5.4.0"
edit-distance = "2.1.0"
futures = "0.3.28"
indicatif = "0.17.3"
itertools = "0.10.5"
num_cpus = "1.15.0"
rustc-hash = "1.1.0"
terminal_size = "0.2.6"
tokio = { version = "1.27.0", features = ["full"] }
